plugins {
    id 'org.springframework.boot' version '2.1.8.RELEASE'
    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
    id 'java'
    id 'net.ltgt.apt' version '0.8'
}

group = 'com.alessandro'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '12'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.h2database:h2'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    compileOnly('org.mapstruct:mapstruct:1.3.0.Final')
    annotationProcessor "org.mapstruct:mapstruct-processor:1.3.0.Final"
    compile group: 'org.springframework', name: 'spring-aop', version: '5.1.8.RELEASE'
    compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.4'
}

compileJava {
    options.annotationProcessorPath = configurations.annotationProcessor
    options.compilerArgs << "-Amapstruct.defaultComponentModel=spring"
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}